--- a/ImageRectification/ImageRectification.vcxproj
+++ b/ImageRectification/ImageRectification.vcxproj
@@ -123,7 +123,8 @@
     <ClInclude Include="CvUtil.h" />
     <ClInclude Include="Exceptions.h" />
     <ClInclude Include="KeyPointMatcher.h" />
-    <ClInclude Include="Rectification.h" />
+    <ClInclude Include="PhotoConsistency.h" />
+    <ClInclude Include="DepthReconstruct.h" />
     <ClInclude Include="Util.h" />
   </ItemGroup>
   <ItemGroup>
@@ -131,7 +132,8 @@
     <ClCompile Include="CvUtil.cpp" />
     <ClCompile Include="KeyPointMatcher.cpp" />
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="Rectification.cpp" />
+    <ClCompile Include="PhotoConsistency.cpp" />
+    <ClCompile Include="DepthReconstruct.cpp" />
     <ClCompile Include="Util.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
